--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "Afegir Usuari",
 	"Adjusting these settings will apply changes universally to all users.": "Ajustar aquests paràmetres aplicarà canvis de manera universal a tots els usuaris.",
 	"admin": "administrador",
+	"Admin": "",
 	"Admin Panel": "Panell d'Administració",
 	"Admin Settings": "Configuració d'Administració",
 	"Advanced Parameters": "Paràmetres Avançats",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "Fes clic aquí per seleccionar",
 	"Click here to select a csv file.": "Fes clic aquí per seleccionar un fitxer csv.",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Fes clic aquí per seleccionar documents.",
 	"click here.": "fes clic aquí.",
 	"Click on the user role button to change a user's role.": "Fes clic al botó de rol d'usuari per canviar el rol d'un usuari.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Descobreix un prompt",
 	"Discover, download, and explore custom prompts": "Descobreix, descarrega i explora prompts personalitzats",
 	"Discover, download, and explore model presets": "Descobreix, descarrega i explora presets de models",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Mostra el nom d'usuari en lloc de 'Tu' al Xat",
 	"Document": "Document",
 	"Document Settings": "Configuració de Documents",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "API d'Ollama",
 	"Ollama API disabled": "L'API d'Ollama desactivada",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Versió d'Ollama",
 	"On": "Activat",
 	"Only": "Només",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Rosé Pine",
 	"Rosé Pine Dawn": "Albada Rosé Pine",
 	"RTL": "RTL",
+	"Running": "",
 	"Save": "Guarda",
 	"Save & Create": "Guarda i Crea",
 	"Save & Update": "Guarda i Actualitza",
@@ -517,6 +522,7 @@
 	"Update password": "Actualitza contrasenya",
 	"Upload a GGUF model": "Puja un model GGUF",
 	"Upload Files": "Pujar fitxers",
+	"Upload Pipeline": "",
 	"Upload Progress": "Progrés de Càrrega",
 	"URL Mode": "Mode URL",
 	"Use '#' in the prompt input to load and select your documents.": "Utilitza '#' a l'entrada del prompt per carregar i seleccionar els teus documents.",
@@ -552,7 +558,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Escriu un resum en 50 paraules que resumeixi [tema o paraula clau].",
 	"Yesterday": "Ayer",
 	"You": "Tu",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "No es pot clonar un model base",
 	"You have no archived conversations.": "No tens converses arxivades.",
 	"You have shared this chat": "Has compartit aquest xat",
