--- a/src/lib/i18n/locales/ceb-PH/translation.json
+++ b/src/lib/i18n/locales/ceb-PH/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "",
 	"Adjusting these settings will apply changes universally to all users.": "Ang pag-adjust niini nga mga setting magamit ang mga pagbag-o sa tanan nga tiggamit.",
 	"admin": "Administrator",
+	"Admin": "",
 	"Admin Panel": "Admin Panel",
 	"Admin Settings": "Mga setting sa administratibo",
 	"Advanced Parameters": "advanced settings",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "I-klik dinhi aron makapili",
 	"Click here to select a csv file.": "",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Pag-klik dinhi aron mapili ang mga dokumento.",
 	"click here.": "I-klik dinhi.",
 	"Click on the user role button to change a user's role.": "I-klik ang User Role button aron usbon ang role sa user.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Pagkaplag usa ka prompt",
 	"Discover, download, and explore custom prompts": "Pagdiskubre, pag-download ug pagsuhid sa mga naandan nga pag-aghat",
 	"Discover, download, and explore model presets": "Pagdiskobre, pag-download, ug pagsuhid sa mga preset sa template",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Ipakita ang username imbes nga 'Ikaw' sa Panaghisgutan",
 	"Document": "Dokumento",
 	"Document Settings": "Mga Setting sa Dokumento",
@@ -339,6 +342,7 @@
 	"Ollama": "",
 	"Ollama API": "",
 	"Ollama API disabled": "",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Ollama nga bersyon",
 	"On": "Gipaandar",
 	"Only": "Lamang",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Rosé Pine",
 	"Rosé Pine Dawn": "Aube Pine Rosé",
 	"RTL": "",
+	"Running": "",
 	"Save": "Tipigi",
 	"Save & Create": "I-save ug Paghimo",
 	"Save & Update": "I-save ug I-update",
@@ -516,6 +521,7 @@
 	"Update password": "I-update ang password",
 	"Upload a GGUF model": "Pag-upload ug modelo sa GGUF",
 	"Upload Files": "",
+	"Upload Pipeline": "",
 	"Upload Progress": "Pag-uswag sa Pag-upload",
 	"URL Mode": "URL mode",
 	"Use '#' in the prompt input to load and select your documents.": "Gamita ang '#' sa dali nga pagsulod aron makarga ug mapili ang imong mga dokumento.",
@@ -551,7 +557,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Pagsulat og 50 ka pulong nga summary nga nagsumaryo [topic o keyword].",
 	"Yesterday": "",
 	"You": "",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "",
 	"You have shared this chat": "",
