--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "User hinzufügen",
 	"Adjusting these settings will apply changes universally to all users.": "Das Anpassen dieser Einstellungen wirkt sich universell auf alle Benutzer aus.",
 	"admin": "Administrator",
+	"Admin": "",
 	"Admin Panel": "Admin Panel",
 	"Admin Settings": "Admin Einstellungen",
 	"Advanced Parameters": "Erweiterte Parameter",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "Klicke hier um auszuwählen",
 	"Click here to select a csv file.": "Klicke hier um eine CSV-Datei auszuwählen.",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Klicke hier um Dokumente auszuwählen",
 	"click here.": "hier klicken.",
 	"Click on the user role button to change a user's role.": "Klicke auf die Benutzerrollenschaltfläche, um die Rolle eines Benutzers zu ändern.",
@@ -127,8 +129,8 @@
 	"Create new secret key": "Neuen API Schlüssel erstellen",
 	"Created at": "Erstellt am",
 	"Created At": "Erstellt am",
-	"CSV Import": "",
 	"Created by": "Erstellt von",
+	"CSV Import": "",
 	"Current Model": "Aktuelles Modell",
 	"Current Password": "Aktuelles Passwort",
 	"Custom": "Benutzerdefiniert",
@@ -340,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "Ollama-API",
 	"Ollama API disabled": "Ollama-API deaktiviert",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Ollama-Version",
 	"On": "Ein",
 	"Only": "Nur",
@@ -369,8 +372,8 @@
 	"Plain text (.txt)": "Nur Text (.txt)",
 	"Playground": "Testumgebung",
 	"Positive attitude": "Positive Einstellung",
-	"Previous 7 days": "Vorherige 7 Tage",
 	"Previous 30 days": "Vorherige 30 Tage",
+	"Previous 7 days": "Vorherige 7 Tage",
 	"Profile Image": "Profilbild",
 	"Prompt": "Prompt",
 	"Prompt (e.g. Tell me a fun fact about the Roman Empire)": "Prompt (z.B. Erzähle mir eine interessante Tatsache über das Römische Reich.",
@@ -518,6 +521,7 @@
 	"Update password": "Passwort aktualisieren",
 	"Upload a GGUF model": "GGUF Model hochladen",
 	"Upload Files": "Dateien hochladen",
+	"Upload Pipeline": "",
 	"Upload Progress": "Upload Progress",
 	"URL Mode": "URL Modus",
 	"Use '#' in the prompt input to load and select your documents.": "Verwende '#' in der Prompt-Eingabe, um deine Dokumente zu laden und auszuwählen.",
