--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "",
 	"Adjusting these settings will apply changes universally to all users.": "Adjusting these settings will apply changes to all users. Such universal, very wow.",
 	"admin": "admin",
+	"Admin": "",
 	"Admin Panel": "Admin Panel",
 	"Admin Settings": "Admin Settings",
 	"Advanced Parameters": "Advanced Parameters",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "Click to select",
 	"Click here to select a csv file.": "",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Click to select documents",
 	"click here.": "click here. Such click.",
 	"Click on the user role button to change a user's role.": "Click user role button to change role.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Discover a prompt",
 	"Discover, download, and explore custom prompts": "Discover, download, and explore custom prompts",
 	"Discover, download, and explore model presets": "Discover, download, and explore model presets",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Display username instead of You in Chat",
 	"Document": "Document",
 	"Document Settings": "Document Settings",
@@ -339,6 +342,7 @@
 	"Ollama": "",
 	"Ollama API": "",
 	"Ollama API disabled": "",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Ollama Version",
 	"On": "On",
 	"Only": "Only",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Rosé Pine",
 	"Rosé Pine Dawn": "Rosé Pine Dawn",
 	"RTL": "",
+	"Running": "",
 	"Save": "Save much wow",
 	"Save & Create": "Save & Create much create",
 	"Save & Update": "Save & Update much update",
@@ -518,6 +523,7 @@
 	"Update password": "Update password much change",
 	"Upload a GGUF model": "Upload a GGUF model very upload",
 	"Upload Files": "",
+	"Upload Pipeline": "",
 	"Upload Progress": "Upload Progress much progress",
 	"URL Mode": "URL Mode much mode",
 	"Use '#' in the prompt input to load and select your documents.": "Use '#' in the prompt input to load and select your documents. Much use.",
@@ -553,7 +559,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Write a summary in 50 words that summarizes [topic or keyword]. Much summarize.",
 	"Yesterday": "",
 	"You": "",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "",
 	"You have shared this chat": "",
