--- a/src/lib/i18n/locales/en-GB/translation.json
+++ b/src/lib/i18n/locales/en-GB/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "",
 	"Adjusting these settings will apply changes universally to all users.": "",
 	"admin": "",
+	"Admin": "",
 	"Admin Panel": "",
 	"Admin Settings": "",
 	"Advanced Parameters": "",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "",
 	"Click here to select a csv file.": "",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "",
 	"click here.": "",
 	"Click on the user role button to change a user's role.": "",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "",
 	"Discover, download, and explore custom prompts": "",
 	"Discover, download, and explore model presets": "",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "",
 	"Document": "",
 	"Document Settings": "",
@@ -339,6 +342,7 @@
 	"Ollama": "",
 	"Ollama API": "",
 	"Ollama API disabled": "",
+	"Ollama API is disabled": "",
 	"Ollama Version": "",
 	"On": "",
 	"Only": "",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "",
 	"Rosé Pine Dawn": "",
 	"RTL": "",
+	"Running": "",
 	"Save": "",
 	"Save & Create": "",
 	"Save & Update": "",
@@ -516,6 +521,7 @@
 	"Update password": "",
 	"Upload a GGUF model": "",
 	"Upload Files": "",
+	"Upload Pipeline": "",
 	"Upload Progress": "",
 	"URL Mode": "",
 	"Use '#' in the prompt input to load and select your documents.": "",
@@ -551,7 +557,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "",
 	"Yesterday": "",
 	"You": "",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "",
 	"You have shared this chat": "",
