--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "Ajouter un Utilisateur",
 	"Adjusting these settings will apply changes universally to all users.": "L'ajustement de ces paramètres appliquera les changements à tous les utilisateurs.",
 	"admin": "admin",
+	"Admin": "",
 	"Admin Panel": "Panneau d'Administration",
 	"Admin Settings": "Paramètres d'Administration",
 	"Advanced Parameters": "Paramètres Avancés",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "Cliquez ici pour sélectionner",
 	"Click here to select a csv file.": "Cliquez ici pour sélectionner un fichier csv.",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Cliquez ici pour sélectionner des documents.",
 	"click here.": "cliquez ici.",
 	"Click on the user role button to change a user's role.": "Cliquez sur le bouton de rôle d'utilisateur pour changer le rôle d'un utilisateur.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Découvrir un prompt",
 	"Discover, download, and explore custom prompts": "Découvrir, télécharger et explorer des prompts personnalisés",
 	"Discover, download, and explore model presets": "Découvrir, télécharger et explorer des préconfigurations de modèles",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Afficher le nom d'utilisateur au lieu de 'Vous' dans le Chat",
 	"Document": "Document",
 	"Document Settings": "Paramètres du document",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "API Ollama",
 	"Ollama API disabled": "API Ollama désactivée",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Version Ollama",
 	"On": "Activé",
 	"Only": "Seulement",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Pin Rosé",
 	"Rosé Pine Dawn": "Aube Pin Rosé",
 	"RTL": "RTL",
+	"Running": "",
 	"Save": "Enregistrer",
 	"Save & Create": "Enregistrer & Créer",
 	"Save & Update": "Enregistrer & Mettre à jour",
@@ -517,6 +522,7 @@
 	"Update password": "Mettre à Jour le Mot de Passe",
 	"Upload a GGUF model": "Téléverser un modèle GGUF",
 	"Upload Files": "Télécharger des fichiers",
+	"Upload Pipeline": "",
 	"Upload Progress": "Progression du Téléversement",
 	"URL Mode": "Mode URL",
 	"Use '#' in the prompt input to load and select your documents.": "Utilisez '#' dans l'entrée du prompt pour charger et sélectionner vos documents.",
@@ -552,7 +558,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Ecrivez un résumé en 50 mots qui résume [sujet ou mot-clé]",
 	"Yesterday": "Hier",
 	"You": "Vous",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Vous ne pouvez pas cloner un modèle de base",
 	"You have no archived conversations.": "Vous n'avez pas de conversations archivées",
 	"You have shared this chat": "Vous avez partagé ce chat",
