--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "사용자 추가",
 	"Adjusting these settings will apply changes universally to all users.": "이 설정을 조정하면 모든 사용자에게 적용됩니다.",
 	"admin": "관리자",
+	"Admin": "",
 	"Admin Panel": "관리자 패널",
 	"Admin Settings": "관리자 설정",
 	"Advanced Parameters": "고급 매개변수",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "선택하려면 여기를 클릭하세요.",
 	"Click here to select a csv file.": "csv 파일을 선택하려면 여기를 클릭하세요.",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "문서를 선택하려면 여기를 클릭하세요.",
 	"click here.": "여기를 클릭하세요.",
 	"Click on the user role button to change a user's role.": "사용자 역할 버튼을 클릭하여 사용자의 역할을 변경하세요.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "프롬프트 검색",
 	"Discover, download, and explore custom prompts": "사용자 정의 프롬프트 검색, 다운로드 및 탐색",
 	"Discover, download, and explore model presets": "모델 사전 설정 검색, 다운로드 및 탐색",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "채팅에서 'You' 대신 사용자 이름 표시",
 	"Document": "문서",
 	"Document Settings": "문서 설정",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "올라마 API",
 	"Ollama API disabled": "Ollama API 사용 안 함",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Ollama 버전",
 	"On": "켜기",
 	"Only": "오직",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "로제 파인",
 	"Rosé Pine Dawn": "로제 파인 던",
 	"RTL": "RTL",
+	"Running": "",
 	"Save": "저장",
 	"Save & Create": "저장 및 생성",
 	"Save & Update": "저장 및 업데이트",
@@ -515,6 +520,7 @@
 	"Update password": "비밀번호 업데이트",
 	"Upload a GGUF model": "GGUF 모델 업로드",
 	"Upload Files": "파일 업로드",
+	"Upload Pipeline": "",
 	"Upload Progress": "업로드 진행 상황",
 	"URL Mode": "URL 모드",
 	"Use '#' in the prompt input to load and select your documents.": "프롬프트 입력에서 '#'를 사용하여 문서를 로드하고 선택하세요.",
@@ -550,7 +556,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[주제 또는 키워드]에 대한 50단어 요약문 작성.",
 	"Yesterday": "어제",
 	"You": "당신",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "기본 모델은 복제할 수 없습니다",
 	"You have no archived conversations.": "채팅을 아카이브한 적이 없습니다.",
 	"You have shared this chat": "이 채팅을 공유했습니다.",
