--- a/src/lib/i18n/locales/lt-LT/translation.json
+++ b/src/lib/i18n/locales/lt-LT/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "Pridėti naudotoją",
 	"Adjusting these settings will apply changes universally to all users.": "Šių nustatymų pakeitimas bus pritakytas visiems naudotojams.",
 	"admin": "Administratorius",
+	"Admin": "",
 	"Admin Panel": "Administratorių panelė",
 	"Admin Settings": "Administratorių nustatymai",
 	"Advanced Parameters": "Gilieji nustatymai",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "Spauskite čia norėdami pasirinkti",
 	"Click here to select a csv file.": "Spauskite čia tam, kad pasirinkti csv failą",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Spauskite čia norėdami pasirinkti dokumentus.",
 	"click here.": "paspauskite čia.",
 	"Click on the user role button to change a user's role.": "Paspauskite ant naudotojo rolės mygtuko tam, kad pakeisti naudotojo rolę.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Atrasti užklausas",
 	"Discover, download, and explore custom prompts": "Atrasti ir parsisiųsti užklausas",
 	"Discover, download, and explore model presets": "Atrasti ir parsisiųsti modelių konfigūracija",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Rodyti naudotojo vardą vietoje žodžio Jūs pokalbyje",
 	"Document": "Dokumentas",
 	"Document Settings": "Dokumento nuostatos",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "",
 	"Ollama API disabled": "",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Ollama versija",
 	"On": "Aktyvuota",
 	"Only": "Tiktais",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Rosé Pine",
 	"Rosé Pine Dawn": "Rosé Pine Dawn",
 	"RTL": "",
+	"Running": "",
 	"Save": "Išsaugoti",
 	"Save & Create": "Išsaugoti ir sukurti",
 	"Save & Update": "Išsaugoti ir atnaujinti",
@@ -518,6 +523,7 @@
 	"Update password": "Atnaujinti slaptažodį",
 	"Upload a GGUF model": "Parsisiųsti GGUF modelį",
 	"Upload Files": "",
+	"Upload Pipeline": "",
 	"Upload Progress": "Įkėlimo progresas",
 	"URL Mode": "URL režimas",
 	"Use '#' in the prompt input to load and select your documents.": "Naudokite '#' norėdami naudoti dokumentą.",
@@ -553,7 +559,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Parašyk santrumpą trumpesnę nei 50 žodžių šiam tekstui: [tekstas]",
 	"Yesterday": "Vakar",
 	"You": "Jūs",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "Jūs neturite archyvuotų pokalbių",
 	"You have shared this chat": "Pasidalinote šiuo pokalbiu",
