--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "Добавьте пользователя",
 	"Adjusting these settings will apply changes universally to all users.": "Регулирующий этих настроек приведет к изменениям для все пользователей.",
 	"admin": "админ",
+	"Admin": "",
 	"Admin Panel": "Панель админ",
 	"Admin Settings": "Настройки админ",
 	"Advanced Parameters": "Расширенные Параметры",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "Нажмите тут чтобы выберите",
 	"Click here to select a csv file.": "Нажмите здесь чтобы выбрать файл csv.",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Нажмите здесь чтобы выберите документы.",
 	"click here.": "нажмите здесь.",
 	"Click on the user role button to change a user's role.": "Нажмите кнопку роли пользователя чтобы изменить роль пользователя.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Найти промт",
 	"Discover, download, and explore custom prompts": "Находите, загружайте и исследуйте настраиваемые промты",
 	"Discover, download, and explore model presets": "Находите, загружайте и исследуйте предустановки модели",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Отображать имя пользователя вместо 'Вы' в чате",
 	"Document": "Документ",
 	"Document Settings": "Настройки документа",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "Ollama API",
 	"Ollama API disabled": "Ollama API отключен",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Версия Ollama",
 	"On": "Включено.",
 	"Only": "Только",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Розовое сосновое дерево",
 	"Rosé Pine Dawn": "Розовое сосновое дерево рассвет",
 	"RTL": "RTL",
+	"Running": "",
 	"Save": "Сохранить",
 	"Save & Create": "Сохранить и создать",
 	"Save & Update": "Сохранить и обновить",
@@ -518,6 +523,7 @@
 	"Update password": "Обновить пароль",
 	"Upload a GGUF model": "Загрузить модель GGUF",
 	"Upload Files": "Загрузка файлов",
+	"Upload Pipeline": "",
 	"Upload Progress": "Прогресс загрузки",
 	"URL Mode": "Режим URL",
 	"Use '#' in the prompt input to load and select your documents.": "Используйте '#' в поле ввода промпта для загрузки и выбора ваших документов.",
@@ -553,7 +559,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишите резюме в 50 словах, которое кратко описывает [тему или ключевое слово].",
 	"Yesterday": "Вчера",
 	"You": "Вы",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Клонировать базовую модель невозможно",
 	"You have no archived conversations.": "У вас нет архивированных бесед.",
 	"You have shared this chat": "Вы поделились этим чатом",
