--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "Додај корисника",
 	"Adjusting these settings will apply changes universally to all users.": "Прилагођавање ових подешавања ће применити промене на све кориснике.",
 	"admin": "админ",
+	"Admin": "",
 	"Admin Panel": "Админ табла",
 	"Admin Settings": "Админ подешавања",
 	"Advanced Parameters": "Напредни параметри",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "Кликните овде да изаберете",
 	"Click here to select a csv file.": "Кликните овде да изаберете csv датотеку.",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Кликните овде да изаберете документе.",
 	"click here.": "кликните овде.",
 	"Click on the user role button to change a user's role.": "Кликните на дугме за улогу корисника да промените улогу корисника.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Откриј упит",
 	"Discover, download, and explore custom prompts": "Откријте, преузмите и истражите прилагођене упите",
 	"Discover, download, and explore model presets": "Откријте, преузмите и истражите образце модела",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Прикажи корисничко име уместо Ти у чату",
 	"Document": "Документ",
 	"Document Settings": "Подешавања документа",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "Оллама АПИ",
 	"Ollama API disabled": "Оллама АПИ онемогућен",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Издање Ollama-е",
 	"On": "Укључено",
 	"Only": "Само",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Rosé Pine",
 	"Rosé Pine Dawn": "Rosé Pine Dawn",
 	"RTL": "ДНЛ",
+	"Running": "",
 	"Save": "Сачувај",
 	"Save & Create": "Сачувај и направи",
 	"Save & Update": "Сачувај и ажурирај",
@@ -517,6 +522,7 @@
 	"Update password": "Ажурирај лозинку",
 	"Upload a GGUF model": "Отпреми GGUF модел",
 	"Upload Files": "Отпремање датотека",
+	"Upload Pipeline": "",
 	"Upload Progress": "Напредак отпремања",
 	"URL Mode": "Режим адресе",
 	"Use '#' in the prompt input to load and select your documents.": "Користи '#' у уносу упита да учитате и изаберете ваше документе.",
@@ -552,7 +558,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишите сажетак у 50 речи који резимира [тему или кључну реч].",
 	"Yesterday": "Јуче",
 	"You": "Ти",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Не можеш клонирати основни модел",
 	"You have no archived conversations.": "Немате архивиране разговоре.",
 	"You have shared this chat": "Поделили сте ово ћаскање",
