--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "Lägg till användare",
 	"Adjusting these settings will apply changes universally to all users.": "Justering av dessa inställningar kommer att tillämpa ändringar universellt för alla användare.",
 	"admin": "administratör",
+	"Admin": "",
 	"Admin Panel": "Administrationspanel",
 	"Admin Settings": "Administratörsinställningar",
 	"Advanced Parameters": "Avancerade parametrar",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "Klicka här för att välja",
 	"Click here to select a csv file.": "Klicka här för att välja en csv-fil.",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Klicka här för att välja dokument.",
 	"click here.": "klicka här.",
 	"Click on the user role button to change a user's role.": "Klicka på knappen för användarroll för att ändra en användares roll.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Upptäck en prompt",
 	"Discover, download, and explore custom prompts": "Upptäck, ladda ner och utforska anpassade prompts",
 	"Discover, download, and explore model presets": "Upptäck, ladda ner och utforska modellförinställningar",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Visa användarnamnet istället för du i chatten",
 	"Document": "Dokument",
 	"Document Settings": "Dokumentinställningar",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "Ollama API",
 	"Ollama API disabled": "Ollama API inaktiverat",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Ollama-version",
 	"On": "På",
 	"Only": "Endast",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Rosé Pine",
 	"Rosé Pine Dawn": "Rosé Pine Dawn",
 	"RTL": "RTL",
+	"Running": "",
 	"Save": "Spara",
 	"Save & Create": "Spara och skapa",
 	"Save & Update": "Spara och uppdatera",
@@ -516,6 +521,7 @@
 	"Update password": "Uppdatera lösenord",
 	"Upload a GGUF model": "Ladda upp en GGUF-modell",
 	"Upload Files": "Ladda upp filer",
+	"Upload Pipeline": "",
 	"Upload Progress": "Uppladdningsförlopp",
 	"URL Mode": "URL-läge",
 	"Use '#' in the prompt input to load and select your documents.": "Använd '#' i promptinmatningen för att ladda och välja dina dokument.",
@@ -551,7 +557,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Skriv en sammanfattning på 50 ord som sammanfattar [ämne eller nyckelord].",
 	"Yesterday": "Igenom",
 	"You": "du",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Du kan inte klona en basmodell",
 	"You have no archived conversations.": "Du har inga arkiverade konversationer.",
 	"You have shared this chat": "Du har delat denna chatt",
