--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "Kullanıcı Ekle",
 	"Adjusting these settings will apply changes universally to all users.": "Bu ayarları ayarlamak değişiklikleri tüm kullanıcılara evrensel olarak uygular.",
 	"admin": "yönetici",
+	"Admin": "",
 	"Admin Panel": "Yönetici Paneli",
 	"Admin Settings": "Yönetici Ayarları",
 	"Advanced Parameters": "Gelişmiş Parametreler",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "Seçmek için buraya tıklayın",
 	"Click here to select a csv file.": "Bir CSV dosyası seçmek için buraya tıklayın.",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "Belgeleri seçmek için buraya tıklayın.",
 	"click here.": "buraya tıklayın.",
 	"Click on the user role button to change a user's role.": "Bir kullanıcının rolünü değiştirmek için kullanıcı rolü düğmesine tıklayın.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Bir prompt keşfedin",
 	"Discover, download, and explore custom prompts": "Özel promptları keşfedin, indirin ve inceleyin",
 	"Discover, download, and explore model presets": "Model ön ayarlarını keşfedin, indirin ve inceleyin",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "Sohbet'te Siz yerine kullanıcı adını göster",
 	"Document": "Belge",
 	"Document Settings": "Belge Ayarları",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "Ollama API",
 	"Ollama API disabled": "Ollama API'si devre dışı",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Ollama Sürümü",
 	"On": "Açık",
 	"Only": "Yalnızca",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Rosé Pine",
 	"Rosé Pine Dawn": "Rosé Pine Dawn",
 	"RTL": "RTL",
+	"Running": "",
 	"Save": "Kaydet",
 	"Save & Create": "Kaydet ve Oluştur",
 	"Save & Update": "Kaydet ve Güncelle",
@@ -516,6 +521,7 @@
 	"Update password": "Parolayı Güncelle",
 	"Upload a GGUF model": "Bir GGUF modeli yükle",
 	"Upload Files": "Dosyaları Yükle",
+	"Upload Pipeline": "",
 	"Upload Progress": "Yükleme İlerlemesi",
 	"URL Mode": "URL Modu",
 	"Use '#' in the prompt input to load and select your documents.": "Belgelerinizi yüklemek ve seçmek için promptda '#' kullanın.",
@@ -551,7 +557,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "[Konuyu veya anahtar kelimeyi] özetleyen 50 kelimelik bir özet yazın.",
 	"Yesterday": "Dün",
 	"You": "Sen",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "Bir temel modeli klonlayamazsınız",
 	"You have no archived conversations.": "Arşivlenmiş sohbetleriniz yok.",
 	"You have shared this chat": "Bu sohbeti paylaştınız",
