--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "Додати користувача",
 	"Adjusting these settings will apply changes universally to all users.": "Зміни в цих налаштуваннях будуть застосовані для всіх користувачів.",
 	"admin": "адмін",
+	"Admin": "Адмін",
 	"Admin Panel": "Адмін-панель",
 	"Admin Settings": "Налаштування адміністратора",
 	"Advanced Parameters": "Розширені параметри",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "Натисніть тут, щоб завантажити файл шаблону імпорту користувача.",
 	"Click here to select": "Натисніть тут, щоб вибрати",
 	"Click here to select a csv file.": "Натисніть тут, щоб вибрати csv-файл.",
+	"Click here to select a py file.": "Натисніть тут, щоб вибрати py-файл.",
 	"Click here to select documents.": "Натисніть тут, щоб вибрати документи.",
 	"click here.": "клацніть тут.",
 	"Click on the user role button to change a user's role.": "Натисніть кнопку ролі користувача, щоб змінити роль користувача.",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "Знайти промт",
 	"Discover, download, and explore custom prompts": "Знайдіть, завантажте та досліджуйте налаштовані промти",
 	"Discover, download, and explore model presets": "Знайдіть, завантажте та досліджуйте налаштовані налаштування моделі",
+	"Dismissible": "Неприйнятно",
 	"Display the username instead of You in the Chat": "Показувати ім'я користувача замість 'Ви' в чаті",
 	"Document": "Документ",
 	"Document Settings": "Налаштування документа",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "Ollama API",
 	"Ollama API disabled": "Ollama API вимкнено",
+	"Ollama API is disabled": "API Ollama вимкнено",
 	"Ollama Version": "Версія Ollama",
 	"On": "Увімк",
 	"Only": "Тільки",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "Rosé Pine",
 	"Rosé Pine Dawn": "Rosé Pine Dawn",
 	"RTL": "RTL",
+	"Running": "Виконується",
 	"Save": "Зберегти",
 	"Save & Create": "Зберегти та створити",
 	"Save & Update": "Зберегти та оновити",
@@ -518,6 +523,7 @@
 	"Update password": "Оновити пароль",
 	"Upload a GGUF model": "Завантажити GGUF модель",
 	"Upload Files": "Додати файли",
+	"Upload Pipeline": "Завантаження Pipeline",
 	"Upload Progress": "Прогрес завантаження",
 	"URL Mode": "Режим URL-адреси",
 	"Use '#' in the prompt input to load and select your documents.": "Для введення промтів до веб-сторінок (URL) або вибору документів, будь ласка, використовуйте символ '#'.",
@@ -553,7 +559,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишіть стислий зміст у 50 слів, який узагальнює [тема або ключове слово].",
 	"Yesterday": "Вчора",
 	"You": "Ви",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "Ви можете налаштувати ваші взаємодії з мовними моделями, додавши спогади через кнопку \"Керувати\" внизу, що зробить їх більш корисними та персоналізованими для вас.",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "Ви можете налаштувати ваші взаємодії з мовними моделями, додавши спогади через кнопку 'Керувати' внизу, що зробить їх більш корисними та персоналізованими для вас.",
 	"You cannot clone a base model": "Базову модель не можна клонувати",
 	"You have no archived conversations.": "У вас немає архівованих розмов.",
 	"You have shared this chat": "Ви поділилися цим чатом",
