--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -31,6 +31,7 @@
 	"Add User": "新增用户",
 	"Adjusting these settings will apply changes universally to all users.": "調整這些設定將對所有使用者進行更改。",
 	"admin": "管理員",
+	"Admin": "",
 	"Admin Panel": "管理員控制台",
 	"Admin Settings": "管理設定",
 	"Advanced Parameters": "進階參數",
@@ -96,6 +97,7 @@
 	"Click here to download user import template file.": "",
 	"Click here to select": "點擊這裡選擇",
 	"Click here to select a csv file.": "點擊這裡選擇 csv 檔案。",
+	"Click here to select a py file.": "",
 	"Click here to select documents.": "點擊這裡選擇文件。",
 	"click here.": "點擊這裡。",
 	"Click on the user role button to change a user's role.": "點擊使用者 Role 按鈕以更改使用者的 Role。",
@@ -160,6 +162,7 @@
 	"Discover a prompt": "發現新提示詞",
 	"Discover, download, and explore custom prompts": "發現、下載並探索他人設置的提示詞",
 	"Discover, download, and explore model presets": "發現、下載並探索他人設置的模型",
+	"Dismissible": "",
 	"Display the username instead of You in the Chat": "在聊天中顯示使用者名稱而不是「你」",
 	"Document": "文件",
 	"Document Settings": "文件設定",
@@ -339,6 +342,7 @@
 	"Ollama": "Ollama",
 	"Ollama API": "Ollama API",
 	"Ollama API disabled": "Ollama API 已禁用",
+	"Ollama API is disabled": "",
 	"Ollama Version": "Ollama 版本",
 	"On": "開啟",
 	"Only": "僅有",
@@ -402,6 +406,7 @@
 	"Rosé Pine": "玫瑰松",
 	"Rosé Pine Dawn": "黎明玫瑰松",
 	"RTL": "RTL",
+	"Running": "",
 	"Save": "儲存",
 	"Save & Create": "儲存並建立",
 	"Save & Update": "儲存並更新",
@@ -515,6 +520,7 @@
 	"Update password": "更新密碼",
 	"Upload a GGUF model": "上傳一個 GGUF 模型",
 	"Upload Files": "上傳文件",
+	"Upload Pipeline": "",
 	"Upload Progress": "上傳進度",
 	"URL Mode": "URL 模式",
 	"Use '#' in the prompt input to load and select your documents.": "在輸入框中輸入 '#' 以載入並選擇你的文件。",
@@ -550,7 +556,7 @@
 	"Write a summary in 50 words that summarizes [topic or keyword].": "寫一個 50 字的摘要來概括 [主題或關鍵詞]。",
 	"Yesterday": "昨天",
 	"You": "你",
-	"You can personalize your interactions with LLMs by adding memories through the \"Manage\" button below, making them more helpful and tailored to you.": "",
+	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "",
 	"You cannot clone a base model": "你不能複製基礎模型",
 	"You have no archived conversations.": "你沒有任何已封存的對話",
 	"You have shared this chat": "你已分享此聊天",
